<resources>
    <string name="app_name">ClassifyWithTFLite</string>
    <string name="choose_mode">选取图片</string>
    <string name="choose_from_camera">相机拍摄</string>
    <string name="choose_from_DCIM">从相册选取</string>
    <string name="classifier_result">识别结果：</string>
    <string name="url_to_buy">购买链接：</string>
    <string name="account">账号</string>
    <string name="userName">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="user">用户</string>
    <string name="admin">管理员</string>
    <string name="login">登录</string>
    <string name="returnTo">返回</string>
    <string name="register">注册</string>
    <string name="registerTip">没有账号？现在注册</string>
    <string name="delete">删除</string>
    <string name="testLabelName">111啧啧啧Jfdfdfdasfdsafdsasfdsafjkl</string>
    <string name="testTime">2019–10–11 12:11:00</string>
    <string name="add">添加</string>
    <string name="generate">生成识别模型</string>
</resources>
