<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ChooseModeActivity">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textFontWeight="1000"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:text="@string/choose_mode"/>

    <ImageView
        android:id="@+id/takePhotoByCamera"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_camera"
        android:layout_gravity="center"
        android:contentDescription="@string/choose_from_camera"/>

    <ImageView
        android:id="@+id/chooseImageFromDCIM"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="200dp"
        android:src="@drawable/ic_image"
        android:contentDescription="@string/choose_from_DCIM"/>

</androidx.appcompat.widget.LinearLayoutCompat>
